@@ -2,4 +2,8 @@
 
 # Redirect stdout/stderr to /dev/null before invoking the given test
 
-exec $@ >/dev/null 2>&1
+SRCDIR=`dirname $0`
+export SRCDIR
+
+exec >/dev/null 2>&1
+exec ${1+"$@"}
