@@ -1,0 +1,1 @@
+function f1 () { return 0 }
