@@ -1,0 +1,2 @@
+global g1
+function g1set (a) { g1 = a + 0 }
