@@ -1,0 +1,3 @@
+#! /bin/sh
+
+./stap -p2 -I${SRCDIR}/testsuite/semlib -e 'probe begin { a = f1 (); }'
