@@ -1,3 +1,8 @@
+2005-05-24  Frank Ch. Eigler  <fche@redhat.com>
+
+	* testsuite/semlib/*: New tapset library chunks for "-I" testing.
+	* testsuite/semok/eight.stp, nine.stp: New tests.
+
 2005-05-22  Frank Ch. Eigler  <fche@elastic.org>
 
 	* Makefile.am (gcov): New target to generate test-coverage data from
